--- a/provisioning/roles/racoon/tasks/racoon.yml
+++ b/provisioning/roles/racoon/tasks/racoon.yml
@@ -1,5 +1,8 @@
 ---
 - apt: pkg=racoon
 - template: src=ipsec-tools.conf.j2 dest=/etc/ipsec-tools.conf mode=0755 owner=root group=root
+  notify: restart setkey
 - template: src=psk.txt.j2 dest=/etc/racoon/psk.txt mode=0600 owner=root group=root
+  notify: restart racoon
 - template: src=racoon.conf.j2 dest=/etc/racoon/racoon.conf mode=0644 owner=root group=root
+  notify: restart racoon
